--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,9 @@
                     <input class="form-control" type="text" ng-model="todoText">
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="file" ng-model="todoFile">
+                </div>
+                <div class="form-group">
                     <input class="btn-primary form-control" type="submit" value="Add New Todo">
                 </div>
             </form>
